# JobPilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: sample_candidate.json
src/jobpilot/: __init__.py  cli.py  config.py  graph.py  llm.py  logging_config.py  main.py  orchestrator.py  serialization.py
src/jobpilot/agents/: __init__.py  application.py  base.py  cover_letter.py  job_analyzer.py  planner.py  prompts.py  resume.py  reviewer.py  search.py  summarizer.py
src/jobpilot/api/: __init__.py  app.py  deps.py  models.py  routes.py
src/jobpilot/schemas/: __init__.py  application.py  candidate.py  documents.py  job.py  state.py
src/jobpilot/tools/: __init__.py  browser.py  job_search.py
tests/: conftest.py  test_agents.py  test_api.py  test_cli.py  test_config.py  test_graph.py  test_llm_factory.py  test_orchestrator.py  test_schemas.py  test_tools_browser.py  test_tools_job_search.py
