[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpilot"
version = "0.1.0"
description = "An AI job application agent built with LangGraph, Playwright, and FastAPI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JobPilot Contributors" }]
keywords = [
    "ai",
    "agent",
    "langgraph",
    "playwright",
    "fastapi",
    "job-application",
    "claude",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.28",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "playwright>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
# Optional provider back-ends. The core package ships with Anthropic (Claude)
# as the default provider; install the extra to enable another.
openai = ["langchain-openai>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.9.0",
]

[project.scripts]
jobpilot = "jobpilot.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/jobpilot"
Repository = "https://github.com/your-org/jobpilot"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jobpilot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "integration: marks tests that require external services or browsers",
]

[tool.coverage.run]
source = ["jobpilot"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic.

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
